# flight-control

./: CMakeLists.txt  README.md  prj.conf
boards/: frdm_k22f.conf
include/: ahrs.h  motorcontrol.h
src/: ahrs.c  main.c  motorcontrol.c
